fix uvp overflow

--- a/less/styles.less
+++ b/less/styles.less
@@ -233,7 +233,7 @@ header {
   .hero {
     .uvp {
       width: 100%;
-      max-width: 700px;
+      max-width: 900px;
       margin: 0;
       padding: 5rem;
 
@@ -251,6 +251,7 @@ header {
 @media (min-width: 1000px) {
   .hero {
     .uvp {
+      max-width: 1100px;
       h1 {
         font-size: 1.5rem;
         line-height: 2.5rem;
@@ -265,6 +266,7 @@ header {
 @media (min-width: 1400px) {
   .hero {
     .uvp {
+      max-width: 1400px;
       h1 {
         font-size: 1.75rem;
         line-height: 2.75rem;
